fix code overflow

--- a/apps/demo/src/app/code-sample/code-sample.component.scss
+++ b/apps/demo/src/app/code-sample/code-sample.component.scss
@@ -1,4 +1,5 @@
 pre {
   white-space: pre-wrap;
   background-color: #333;
+  overflow: auto;
 }
